# circle-titanoboa-sdk

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
circlekit/: __init__.py  boa_utils.py  builtin_hooks.py  client.py  constants.py  facilitator.py  hooks.py  key_utils.py  server.py  signer.py  sync_client.py  tx_executor.py  wallets.py  x402.py  x402_integration.py
examples/: agent_client.py  check_balances.py  circle_wallet_signer.py  deposit.py  getting_started_gateway.ipynb  paywall_server.py  test_withdraw.py  wallet_demo.py
tests/: __init__.py  conftest.py  test_battle.py  test_builtin_hooks.py  test_circlekit.py  test_circlekit_integration.py  test_client_hooks.py  test_e2e.py  test_hooks.py  test_key_utils.py  test_live_verification.py  test_parity.py  test_real_transactions.py  test_server_hooks.py  test_sync_client.py  test_wallets.py  test_x402_integration.py
