[project]
name = "circle-titanoboa-sdk"
version = "0.1.0"
description = "Python SDK for x402 with Circle Gateway batching - using titanoboa for Vyper contract interactions"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Circle Hackathon Team" }
]
keywords = ["circle", "usdc", "x402", "gateway", "payments", "micropayments", "titanoboa", "vyper", "arc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "titanoboa>=0.2.0",
    "eth-account>=0.11.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
x402 = ["x402[httpx]>=2.0.0"]

[project.urls]
Homepage = "https://github.com/circle-hackathon/circle-titanoboa-sdk"
Documentation = "https://github.com/circle-hackathon/circle-titanoboa-sdk#readme"
Repository = "https://github.com/circle-hackathon/circle-titanoboa-sdk"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["circlekit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
# Disable titanoboa pytest plugin - it tries to use evm_snapshot on real RPCs which fails.
addopts = "-v --tb=short -p no:titanoboa"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.8.0",
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.1",
    "x402[httpx]>=2.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["circlekit", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
